# AlbumExplore

./: .coverage  .gitignore  0])  =6.4.0  ALBUM_SIMILARITY_VISUALIZATION.md  ATOMIC_TAG_SYSTEM_DESIGN.md  CLEANUP_SUMMARY.md  ENHANCED_NORMALIZATION_RESULTS.md  IMPLEMENTATION_SUMMARY.md  LAZY_LOADING_GUIDE.md  MAP_VIEW_INSTALLATION.md  NEW_VISUALIZATION_PROPOSALS.md  QUICK_START_TAG_NORMALIZER_UPGRADE.md  README.md  SIMILARITY_IMPLEMENTATION_COMPLETE.md  SIMILARITY_QUICK_START.md  TAG_ANALYSIS_REPORT.md  TAG_EXPORT_FILTERING_GUIDE.md  TAG_IMPROVEMENTS_SESSION2.md  TAG_NORMALIZATION_IMPROVEMENT_SESSION.md  TAG_NORMALIZATION_INTEGRATION.md  TAG_NORMALIZER_ANALYSIS_AND_IMPROVEMENTS.md  TAG_NORMALIZER_DELIVERABLES_INDEX.md  TAG_NORMALIZER_IMPLEMENTATION_COMPLETE.md  TAG_NORMALIZER_IMPLEMENTATION_RESULTS.md  TAG_NORMALIZER_REAL_WORLD_IMPROVEMENTS.md  TAG_NORMALIZER_UPGRADE_SUMMARY.md  TAG_OPTIMIZATION_REPORT.md  TAG_RULES_IMPROVEMENTS.md  UX_TAG_EXPLORER.md  VISUALIZATION_README.md  VISUALIZATION_REMOVAL_SUMMARY.md  VOCAL_STYLE_IMPLEMENTATION_COMPLETE.md  WORKSPACE_CLEANUP_SUMMARY.md  Yearly Albums - 2019 Prog-rock.csv  [4].coverage  [5].coverage  _r_ProgMetal _ Yearly Albums - 2025 Prog-metal.tsv  _r_ProgMetal _ Yearly Albums.ods  albumexplore.db  (+80 more)
.roo/: system-prompt-architect  system-prompt-ask  system-prompt-code  system-prompt-debug  system-prompt-test
ProgArchives Data/: Canterbury Scene.html  Crossover Prog.html  Eclectic Prog.html  Experimental_Post Metal.html  Heavy Prog.html  Indo-Prog_Raga Rock.html  Jazz Rock_Fusion.html  Krautrock.html  Neo-Prog.html  Post Rock_Math rock.html  Prog Folk.html  ProgArchives Dataset README.txt  ProgSubgenres  Progressive Electronic.html  Progressive Metal.html  Progressive Rock Music Bands_Artists List Starting with letter [_].html  Psychedelic_Space Rock.html  RIO_Avant-Prog.html  Rock Progressivo Italiano.html  Symphonic Prog.html  Tech_Extreme Prog Metal.html  Zeuhl.html
Scripts/: advanced_consolidation_analysis.py  apply_advanced_consolidation.py  debug_csv_format.py  demo_enhanced_consolidation.py  enhanced_tag_analysis.py  final_consolidation_summary.py  get_gprof  get_objgraph  implement_enhanced_tags.py  manage_tags.py  quick_csv_analysis.py  quick_tag_consolidation.py  undill  (+3 more)
(+10544 files in other folders)
