[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "albumexplore"
version = "0.1.0"
description = "A tool for exploring and analyzing music album collections"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Seth N"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "networkx>=3.0",
    "PyQt6>=6.4.0",
    "SQLAlchemy>=2.0.0",
    "alembic>=1.9.0",
    "python-Levenshtein>=0.20.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "python-dateutil>=2.8.2",
    "pycountry>=22.3.5",
    "beautifulsoup4>=4.9.3",
    "psutil",
    "rich",
    "requests",
    "pyppeteer",
    "backoff",
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=0.950",
    "pylint>=2.14.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-qt>=4.2.0",
    "pytest-xvfb>=3.0.0",
    "pytest-asyncio",
]

[project.scripts]
albumexplore = "albumexplore.tools.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=albumexplore"
